Move front page from layout to index

--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -40,7 +40,7 @@ menu:
   homepage: Homepage
   news:     News
   about:    About KSI
-  history:  History (KSI40)
+  history:  History
   events:   Events
   projects: Projects
   contact:  Contact
