--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -40,7 +40,7 @@ menu:
   homepage: Strona główna
   news:     Aktualności
   about:    O KSI
-  history:  Historia (KSI40)
+  history:  Historia
   events:   Wydarzenia
   projects: Projekty
   contact:  Kontakt
