Fixed typo in pl.yml

--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -33,7 +33,7 @@ frontpage:
     more:   Wszystkie artykuły znajdziesz w dziale <em>Aktualności</em>
 
   section_contact:
-    title:  Skonatktuj się z nami!
+    title:  Skontaktuj się z nami!
     text:   Koło Studentów Informatyki nie istniałoby gdyby nie osoby takie jak ty - nasi Kołowicze i sympatycy. Jeżeli masz jakiekolwiek pomysły, sugestie czy pytania - zapraszamy do kontaktu!
 
 menu:
