Prepare for facebook post integration

--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -38,7 +38,7 @@ frontpage:
 
 menu:
   homepage: Homepage
-  news:     News
+  news:     News (PL)
   about:    About KSI
   history:  History
   events:   Events
