--- a/jekyll/Gemfile
+++ b/jekyll/Gemfile
@@ -1,5 +1,9 @@
 source 'https://rubygems.org'
 gem 'jekyll'
+gem 'jekyll-paginate-v2'
 gem 'jekyll-language-plugin'
 gem 'jekyll-sitemap'
-gem 'jekyll-seo-tag' #experimental
+gem 'jekyll-seo-tag'
+group :jekyll_plugins do
+  gem 'jekyll-picture-tag', git: 'https://github.com/robwierzbowski/jekyll-picture-tag/'
+end
