--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -1,7 +1,8 @@
+read_more: Czytaj więcej
+
 frontpage:
   title: Koło Studentów Informatyki UJ
   lead: Witaj na stronie najlepszego koła naukowego na świecie!
-  read_more: Czytaj więcej
 
   section_ksi:
     title:  Koło Studentów Informatyki UJ
@@ -48,3 +49,20 @@ menu:
 list:
   next: Nowsze posty
   previous: Starsze posty
+
+events:
+  title: Wydarzenia
+  sfi_name: Studencki Festiwal Informatyczny
+  sfi_text: Międzynarodowa konferencja informatyczna organizowana przez studentów, dla studentów. Od 2005 r. wraz z kołami naukowymi z 3 innych krakowskich uczelni co rok zapraszam prelegentów z całego świata, na liście których znalazły się nazwiska takie jak Andrew S. Tanenbaum, Thomas Cormen, Larry Wall, Richard Stallman czy Kevin Warwick. Podczas trzech dni konferencji obywa się kilkadziesiąt wykładów i warsztatów, które przyciąga kilka tysięcy uczestników rocznie. Biletem wstępu są jedynie pasja i odrobina chęci oraz zainteresowania tematem.
+  ksitalk: ksiTalk to comiesięczne seminarium studenckie Koła Studentów Informatyki UJ. Cykliczne spotkania Koła mają na celu dzielenie się wiedzą, poszerzanie horyzontów w dziedzinie informatyki oraz ćwiczenie umiejętności retorycznych. Na każdym spotkaniu odbywa się wykład zaproszonego pracownika naukowego, co pozwala studentom nawiązać bliższy kontakt z nauką i potencjalnie rozpocząć współpracę. Oprócz tego odbywają się co najmniej 2 prelekcje członków Koła, którzy przedstawiają realizowane przez nich projekty naukowe, interesujące ich zagadnienia i prace.
+  corp_name: Wykłady i warsztaty we współpracy z firmami IT
+  corp_desc: W KSI rozumiemy jak ważna jest współpraca nauki z biznesem.
+  ksicamp: Specjalnie dla studentów pierwszego roku KSI organizuje cykl weekendowych warsztatów wprowadzających do programowania, środowiska programisty i pracy w zespole. Udział w ksiCampie zapewnia gładkie wejście w studia informatyczne oraz pozwala przećwiczyć zdobytą na zajęciach wiedzę do rozwiązywania praktycznych problemów.
+  science_fests: Festiwale nauki
+  science_fests_desc: Popularyzacja informatyki od najmłodszych lat.
+  mnn: Małopolska Noc Naukowców
+  mnn_desc: Warsztaty z tworzenia gier dla dzieci
+  fnis: Festiwal Nauki i Sztuki w Krakowie
+  fnis_desc: Namiot KSI na krakowskim Rynku Głównym
+  co_op: Zorganizuj wydarzenia z KSI UJ
+  co_op_desc: Chcesz przeprowadzić wykład lub warsztaty na Wydziale Matematyki i Informatyki Uniwersytetu Jagiellońskiego? Twoja firma próbuje nawiązać kontakt ze studentami? A może jesteś studentem i chiałbyś poprowadzić swój pierwszy w życiu wykład? Pomożemy Ci w tym! Napisz do nas lub odwiedź naszą siedzibę.
