--- a/jekyll/Gemfile
+++ b/jekyll/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
-gem 'jekyll'
+gem 'jekyll', '< 4.0'
 gem 'jekyll-paginate-v2'
 gem 'jekyll-language-plugin'
 gem 'jekyll-sitemap'
