--- a/jekyll/Gemfile
+++ b/jekyll/Gemfile
@@ -5,5 +5,5 @@ gem 'jekyll-language-plugin'
 gem 'jekyll-sitemap'
 gem 'jekyll-seo-tag'
 group :jekyll_plugins do
-  gem 'jekyll-picture-tag', git: 'https://github.com/robwierzbowski/jekyll-picture-tag/'
+  gem 'jekyll_picture_tag', '~> 1.6'
 end
