--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -117,6 +117,7 @@ projects:
   deprecated-about: Wyłączone/rozmontowane, ale nadal interesujące
   mordor-about: Aplikacja obsługująca repozytorium materiałów naukowych KSI. Bazuje na Spring Boot, napisana w Kotlinie.
   erc-about: Elektroniczny Rejestr Członków, zarządzający uprawnieniami i statusem członków Koła jest aktualnie w przebudowie.
+  informator-about: Poradnik pomagający pierwszorocznym studentom zgłębić tajniki studiowania na naszym wydziale.
   gutenberg-about: Internetowa aplikacja bazująca na Django pozwalająca szybko i bezpiecznie drukować dokumenty z przeglądarki.
   ksilock-about: System zamków elektronicznych do pomieszczeń naszego Koła - otwórz drzwi legitymacją studencką.
   cas-about: Centralne uwierzytelnienie do wszystkich usług internetowych KSI UJ.
