Update KSI History

--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -61,6 +61,7 @@ about:
  vp: Vice-president
  cfo: Finance director
  secretary: Secretary
+ board_members: Members of the Board
  librarians: Librarians
  housekeepers: Housekeepers
  admins: IT Administrators
