--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -61,6 +61,7 @@ about:
   vp: Wiceprezes
   cfo: Skarbnik
   secretary: Sekretarz
+  board_members: Członkowie Zarządu
   librarians: Bibliotekarze
   housekeepers: Gospodarze
   admins: Administratorzy
