Display the Audit Committee

--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -64,6 +64,7 @@ about:
  board_members: Members of the Board
  librarians: Librarians
  housekeepers: Housekeepers
+ audit_committee: Audit Committee
  admins: IT Administrators
  welcoming-blabla: and we strive to make the University a welcoming place for every Computer Science student!
  structure-about: KSI is a "for students, by students" organisation and is governed as such. The management bodies are
