--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -64,6 +64,7 @@ about:
   board_members: Członkowie Zarządu
   librarians: Bibliotekarze
   housekeepers: Gospodarze
+  audit_committee: Komisja Rewizyjna
   admins: Administratorzy
   welcoming-blabla: i staramy się o to, aby nasz Uniwersytet był przyjaznym miejscem dla każdego studenta informatyki!
   structure-about: KSI jest organizacją "dla studentów, przez studentów" i jest zarządzana w ten sam sposób. Organami kierującymi KSI są
