Add administrators and plenipotentiaries

--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -62,6 +62,8 @@ about:
  cfo: Finance director
  secretary: Secretary
  board_members: Members of the Board
+ administrators: IT Administrators
+ plenipotentiaries: Plenipotentiaries
  librarians: Librarians
  housekeepers: Housekeepers
  audit_committee: Audit Committee
