--- a/jekyll/_data/ksi_decades/201.yml
+++ b/jekyll/_data/ksi_decades/201.yml
@@ -99,5 +99,7 @@ years:
     vice:       Adam Pardyl
     skarbnik:   Łukasz Sereda
     czlonkowie: Mateusz Maćkowski, Elwira Zimoch
+    admini:     Adam Pardyl, Mateusz Maćkowski, Adam Piekarczyk, Michał Piotrowski, Rafał Burczyński, Katarzyna Płoskonka
+    pelnomocnicy: Daniel Barczyk, Marek Grzelak
     gospodarz:  Monika Mikuła, Mateusz Olszewski
     rewizyjna:  Adam Piekarczyk, Wojciech Sabała, Jakub Kiermasz
