--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -62,6 +62,8 @@ about:
   cfo: Skarbnik
   secretary: Sekretarz
   board_members: Członkowie Zarządu
+  administrators: Administratorzy
+  plenipotentiaries: Pełnomocnicy
   librarians: Bibliotekarze
   housekeepers: Gospodarze
   audit_committee: Komisja Rewizyjna
