--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -6,7 +6,7 @@ frontpage:
 
   section_ksi:
     title:  Computer Science Students' Association
-    text:   KSI (Xi) - fourteenth letter of Greek alphabet (which you will learn at introduction to set theory) on our university gained special meaning. This symbol means Computer Science Students' Association (<strong>K</strong>o&#322;o <strong>S</strong>tudnetów <strong>I</strong>nformatyki - KSI=Xi) - organization, which should be known by every computer science student (and not only!). Since 1976 we unite creative and curious people who don't want to limit themselves only to mandatory classes.
+    text:   KSI (Xi) - fourteenth letter of Greek alphabet (which you will learn at introduction to set theory) on our university gained special meaning. This symbol means Computer Science Students' Association (<strong>K</strong>o&#322;o <strong>S</strong>tudentów <strong>I</strong>nformatyki - KSI=Xi) - organization, which should be known by every computer science student (and not only!). Since 1976 we unite creative and curious people who don't want to limit themselves only to mandatory classes.
 
   section_events:
     title:  Events
