add descriptions for year 18/19

--- a/jekyll/_data/ksi_decades/201.yml
+++ b/jekyll/_data/ksi_decades/201.yml
@@ -81,8 +81,8 @@ years:
     gospodarz:  Michał Kawiecki, Jakub Kiermasz
     rewizyjna:  Michał Herda, Krzysztof Hajto
   - year: 2018
-    header:
-    body:
+    header: Niekończący się rozwój
+    body: Organizowaliśmy Tech Talk i Estimathon z Jane Street oraz wykład "Czy programista może wyleczyć raka?" z Ardigen. Tradycyjnie już uczestniczyliśmy w Festiwalu Nauki i Sztuki w Krakowie, Małopolskiej Nocy Naukowców oraz Google Hash Code. Współorganizowaliśmy Targi Kariery, warsztaty "Przygotuj się do rekrutacji" z Talent Place i Tech Talk + VR demo z DisplayLink oraz wykład "Jak działa twój mózg" z Kołem Naukowym Neuronus i Naukowym Kołem Robotyki i Sztucznej Inteligencji.
     zarzad_info: true
     prezes:     Adam Piekarczyk
     vice:       Adam Pardyl, Wojciech Sabała
