--- a/jekyll/Gemfile
+++ b/jekyll/Gemfile
@@ -4,6 +4,7 @@ gem 'jekyll-paginate-v2'
 gem 'jekyll-language-plugin'
 gem 'jekyll-sitemap'
 gem 'jekyll-seo-tag'
+gem 'kramdown-parser-gfm'
 group :jekyll_plugins do
-  gem 'jekyll-picture-tag', git: 'https://github.com/robwierzbowski/jekyll-picture-tag/'
+  gem 'jekyll_picture_tag', '~> 1.10.2'
 end
