--- a/jekyll/Gemfile
+++ b/jekyll/Gemfile
@@ -6,5 +6,5 @@ gem 'jekyll-sitemap'
 gem 'jekyll-seo-tag'
 gem 'kramdown-parser-gfm'
 group :jekyll_plugins do
-  gem 'jekyll_picture_tag', '~> 1.10.2'
+  gem 'jekyll_picture_tag', '1.10.2'
 end
