feat: add honorable members

--- a/jekyll/_data/en.yml
+++ b/jekyll/_data/en.yml
@@ -86,6 +86,8 @@ about:
  housekeepers-about: Taking care of the condition of the premises and assets of the Association.
  statute: Statute
  statute-about: Legal act regulating the tasks, organizational structure and manner of operation of our Association (available in Polish).
+ honorary: Honorary members
+ honorary-about: Featured members with contributions to the development of the Association
 
 list:
   next: Newer posts
