--- a/jekyll/_data/pl.yml
+++ b/jekyll/_data/pl.yml
@@ -86,6 +86,8 @@ about:
   housekeepers-about: Dbają o stan pomieszczeń i majątku Koła.
   statute: Statut
   statute-about: Dokument określający zadania, strukturę i zasady działania naszej organizacji.
+  honorary: Członkowie honorowi
+  honorary-about: Wyróżnieni członkowie z zasługami na rzecz rozwoju Koła
 
 list:
   next: Nowsze posty
