feat: decade update

--- a/jekyll/_data/ksi_decades/202.yml
+++ b/jekyll/_data/ksi_decades/202.yml
@@ -12,3 +12,14 @@ years:
     pelnomocnicy: Daniel Barczyk, Marek Grzelak
     gospodarz:  Monika Mikuła, Mateusz Olszewski
     rewizyjna:  Wojciech Sabała, Szymon Smykała, Dominik Wołek
+  - year: 2021
+    header:
+    body:
+    zarzad_info: true
+    prezes:     Daniel Barczyk
+    vice:       Wiktor Prządka
+    skarbnik:   Paweł Ryś
+    czlonkowie: Paweł Gmerek, Karol Sygiet, Filip Szymeczko
+    admini:     Mikołaj Janusz, Piotr Zieliński
+    gospodarz:  Monika Mikuła
+    rewizyjna:  Mateusz Maćkowski, Adam Pardyl, Łukasz Sereda
