feat: added big thanks to special roles

--- a/jekyll/_data/ksi_decades/202.yml
+++ b/jekyll/_data/ksi_decades/202.yml
@@ -20,6 +20,6 @@ years:
     vice:       Wiktor Prządka
     skarbnik:   Paweł Ryś
     czlonkowie: Paweł Gmerek, Karol Sygiet, Filip Szymeczko
-    admini:     Mikołaj Janusz, Piotr Zieliński
+    admini:     Mikołaj Janusz, Jakub Parapura, Piotr Zieliński
     gospodarz:  Monika Mikuła
     rewizyjna:  Mateusz Maćkowski, Adam Pardyl, Łukasz Sereda
